# evm-track

./: .config.example.bsc.json.swp  .gitignore  20250911.md  CONFIG_SYSTEM.md  Cargo.toml  DYNAMIC_REGISTRY.md  GEMINI.md  LOG.md  README.md  UNIFIED_CONTEXT_SYSTEM.md  config.demo.fixed.json  config.demo.json  config.example.bsc.json  config.example.initscan.json  config.test_large_transfer.json  config.test_large_transfer_fixed.json  config.test_with_tornado.json  deployment-demo.json  event.config.json  init2.demo.json  init_scan.demo.json  test_config.toml  test_context_system.sh  test_dynamic.json  test_unified_config.json  tornado.json  tornado_events.json  tornado_test.json
.github/workflows/: ci.yml
data/: blockscanners.json  event_sigs.json  func_sigs.json  function-signature-calldata.json  node_list.json  null.json  null.json.bak
examples/: demo_dynamic_registry.rs  test_config_system.rs  test_dynamic_registry.rs  test_toml_config.rs
src/: abi.rs  app.rs  cli.rs  config.rs  context.rs  data_cmd.rs  db.rs  error.rs  lib.rs  main.rs  output.rs  provider.rs  public_provider.rs  registry.rs  source.rs  throttle.rs
src/actions/: db_log.rs  deployment.rs  history_init_scan.rs  history_tx_scan.rs  initscan.rs  jsonlog.rs  large_transfer.rs  logging.rs  mod.rs  ownership.rs  proxy.rs  selector_scan.rs  tornado.rs  transfer.rs
src/commands/: init_scan_cmd.rs  mod.rs  sel_scan_cmd.rs  track.rs
src/factories/: deployment.rs  initscan.rs  large_transfer.rs  logging.rs  mod.rs  selector_scan.rs  transfer.rs
src/runtime/: cache.rs  historical.rs  mod.rs  public.rs  (+1 more)
