[package]
name = "evm-track"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
# Alloy stack
alloy-provider = { version = "0.8", features = ["ws"] }
alloy-transport = "0.8"
alloy-transport-ws = "0.8"
alloy-primitives = "0.8"
alloy-rpc-types-eth = "0.8"
alloy-json-abi = "0.8"
alloy-network-primitives = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
base64 = "0.22"
alloy-rpc-types = { version = "0.8.3", features = ["trace"] }
alloy-rpc-types-debug = "0.8.3"
url = "2.5.4"
alloy = "0.8"
 
